<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".Result"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="serif-monospace"
        android:text="@string/age_calculator"
        android:textColor="#00FF04"
        android:textSize="36sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:gravity="center"
        android:paddingTop="50dp"
        android:paddingBottom="50dp"
        android:text="@string/your_age_is"
        android:textColor="#FFEB2B"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anonymous_pro"
        android:gravity="center"
        android:textColor="#F80202"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/cookie"
        android:gravity="center"
        android:text="@string/thank_you"
        android:textColor="#FF0000"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="casual"
        android:gravity="center_horizontal"
        android:text="@string/thank_you_for_using_our_app_we_hope_you_had_calculated_your_age_and_liked_our_app_please_rate_our_app_before_leaving_it_thank_you"
        android:textAlignment="center"
        android:textColor="#FFDD00"
        android:textSize="14sp" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:numStars="5"
        android:rating="2.0" />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:background="@color/purple_500"
        android:fontFamily="monospace"
        android:text="@string/submit"
        android:textColor="#00FF04"
        android:textSize="30sp"
        app:backgroundTint="?attr/colorControlHighlight" />

</LinearLayout>