<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="serif-monospace"
        android:text="@string/age_calculator"
        android:textColor="#00FF04"
        android:textSize="36sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:paddingStart="70dp"
        android:paddingLeft="70dp"
        android:paddingTop="0dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/enter_your_date_of_birth"
        android:textColor="#FFEB2B"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="35dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:text="@string/d"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:text="@string/m"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:text="@string/y"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/bd"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:inputType="numberSigned"
                android:paddingStart="25dp"
                android:paddingLeft="25dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:textColor="#FF0000" />

            <EditText
                android:id="@+id/bm"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:inputType="numberSigned"
                android:paddingStart="30dp"
                android:paddingLeft="30dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:textColor="#FF0000" />

            <EditText
                android:id="@+id/by"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:inputType="numberSigned"
                android:paddingStart="50dp"
                android:paddingLeft="48dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:textColor="#FF0000" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:background="@color/purple_500"
        android:fontFamily="monospace"
        android:text="@string/submit"
        android:textColor="#00FF04"
        android:textSize="30sp"
        app:backgroundTint="?attr/colorControlHighlight" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/cookie"
        android:gravity="start"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp"
        android:text="@string/disclaimer"
        android:textColor="#FF0000"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="casual"
        android:gravity="center_horizontal"
        android:text="This app does not  use any data from our users and adhere to its privacy policies , it does not contain any vulgur things,it just use your date of birth to calculate your age with respect to present.Use our app and Calculate your age Now :) "
        android:textAlignment="center"
        android:textColor="#FFDD00"
        android:textSize="14sp" />

</LinearLayout>